--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -20,18 +20,16 @@
               />
             </div>
           </div>
-          <div class="usa-footer__contact-links mobile-lg:grid-col-6">
-            <p class="usa-footer__contact-heading">
-              Contact us
-            </p>
+          <div class="usa-footer__contact-links 
+                      mobile-lg:grid-col-6 flex-align-self-center"
+          >
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap">
-
                 <div class="grid-col-auto">
                   <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/help/"> Help </a>
                 </div>
                 <div class="grid-col-auto">
-                  <a href="mailto:registrar@dotgov.gov" class="usa-link">registrar@dotgov.gov</a>
+                  <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/contact/" class="usa-link">Contact us</a>
                 </div>
               </div>
             </address>
