--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -24,10 +24,11 @@
                       mobile-lg:grid-col-6 flex-align-self-center"
           >
             <address class="usa-footer__address">
-              <div class="usa-footer__contact-info grid-row grid-gap">
+              <div class="usa-footer__contact-info grid-row grid-gap-md">
                 <div class="grid-col-auto">
                   <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/help/"> Help </a>
                 </div>
+                <span class=""> | </span>
                 <div class="grid-col-auto">
                   <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/contact/" class="usa-link">Contact us</a>
                 </div>
