--- a/src/registrar/templates/domain_nameservers.html
+++ b/src/registrar/templates/domain_nameservers.html
@@ -9,7 +9,7 @@
   <p>Before your domain can be used we'll need information about your domain
   name servers.</p>
 
-  <p><a href="{% url "todo" %}">Get help with domain servers.</a></p>
+  <p><a class="usa-link" href="{% url "todo" %}">Get help with domain servers.</a></p>
 
   {% include "includes/required_fields.html" %}
 
