--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -32,7 +32,7 @@
     <b class="review__step__name">Request #:</b> {{domainapplication.id}}</p>
     <p>{% include "includes/domain_application.html" %}</p>
     <p><a href="{% url 'application-withdraw-confirmation' domainapplication.id %}" class="usa-button usa-button--outline withdraw_outline">
-      Withdraw Request</a>
+      Withdraw request</a>
     </p>
   </div>
 
