--- a/src/registrar/templates/domain_nameservers.html
+++ b/src/registrar/templates/domain_nameservers.html
@@ -18,6 +18,7 @@
 	{{ formset.management_form }}
 
     {% for form in formset %}
+    {% with sublabel_text="Example: ns"|concat:forloop.counter|concat:".nameserver.com" %}
       {% if forloop.counter <= 2 %}
         {% with attr_required=True %}
           {% input_with_errors form.server %}
@@ -25,9 +26,17 @@
       {% else %}
         {% input_with_errors form.server %}
       {% endif %}
+    {% endwith %}
     {% endfor %}
 
-      <button
+    <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled display-block">
+      <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+      </svg><span class="margin-left-05">Add another name server</span>
+    </button>
+
+
+    <button
           type="submit"
           class="usa-button"
       >Save</button>
