--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -8,7 +8,7 @@
   <div class="grid-row grow-gap"> 
     <div class="tablet:grid-col-6 usa-prose margin-bottom-3">
       <h1>
-        {% translate "You are not authorized to view this page." %}
+        {% translate "You are not authorized to view this page" %}
       </h1>
       <h2>
         {% translate "Status 401" %}
@@ -22,7 +22,7 @@
       {% endif %}
       <p>
         You must be an authorized user and need to be signed in to view this page. 
-        Would you like to <a href="{% url 'login' %}"> try loggining in again?</a>
+        Would you like to <a href="{% url 'login' %}"> try logging in again?</a>
       </p>
       <p>
         If you would like help with this error <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/contact/"> contact us </a>
