Resize CISA logo in identifier

--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -417,6 +417,10 @@ footer {
   color: color('primary');
 }
 
+.usa-identifier__logo {
+ height: units(7);
+}
+
 abbr[title] {
   // workaround for underlining abbr element
   border-bottom: none;
