--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -66,7 +66,7 @@
     // --object-tools-hover-bg: var(--close-button-hover-bg);
 
     --font-family-primary:
-        "Public Sans Web",
+        "Public Sans Pro Web",
         "Segoe UI",
         system-ui,
         Roboto,
