Build capability to add sublabels with links to simple form components, with supporting custom filters and unit tests for the custom filters

--- a/src/registrar/templates/application_tribal_government.html
+++ b/src/registrar/templates/application_tribal_government.html
@@ -4,10 +4,12 @@
 
 {% block form_fields %}
 
-  {% with sublabel_text="Please include the entire name of your tribe as recognized by the" %}
+  {% with sublabel_text="Please include the entire name of your tribe as recognized by the Bureau of Indian Affairs." %}
     {% with link_text="Bureau of Indian Affairs" %}
-      {% with link_href="https://rachid.me" %}
-        {% input_with_errors forms.0.tribe_name %}
+      {% with link_href="https://www.federalregister.gov/documents/2023/01/12/2023-00504/indian-entities-recognized-by-and-eligible-to-receive-services-from-the-united-states-bureau-of" %}
+        {% with target_blank="true" %}
+          {% input_with_errors forms.0.tribe_name %}
+        {% endwith %}
       {% endwith %}
     {% endwith %}
   {% endwith %}
