--- a/src/registrar/templates/includes/input_with_errors.html
+++ b/src/registrar/templates/includes/input_with_errors.html
@@ -3,6 +3,8 @@ Template include for form fields with classes and their corresponding
 error messages, if necessary.
 {% endcomment %}
 
+{% load custom_filters %}
+
 {% load widget_tweaks %}
 
 {% if widget.attrs.maxlength %}
@@ -30,12 +32,18 @@ error messages, if necessary.
 
   {% if sublabel_text %}
     <p id="{{ widget.attrs.id }}__sublabel" class="text-base margin-top-2px margin-bottom-1">
-      {{ sublabel_text }}
-      {% if link_text %}
-        <a href="{{ link_href }}">{{ link_text }}</a>.
+      {% comment %} If the link_text appears twice, the first instance will be a link and the second instance will be ignored {% endcomment %}
+      {% if link_text and link_text in sublabel_text %}
+        {% with link_index=sublabel_text|find_index:link_text %}
+          {{ sublabel_text|slice:link_index }}
+          {% comment %} HTML will convert a new line into a space, resulting with a space before the fullstop in case link_text is at the end of sublabel_text, hence the unfortunate line below {% endcomment %}
+          <a {% if target_blank == "true" %}target="_blank" {% endif %}href="{{ link_href }}">{{ link_text }}</a>{% with sublabel_part_after=sublabel_text|slice_after:link_text %}{{ sublabel_part_after }}{% endwith %}
+        {% endwith %}
+      {% else %}
+        {{ sublabel_text }}
       {% endif %}
     </p>
-  {% endif %}
+  {% endif %} 
 
   {% if field.errors %}
     <div id="{{ widget.attrs.id }}__error-message">
