--- a/src/registrar/templates/admin/change_list_results.html
+++ b/src/registrar/templates/admin/change_list_results.html
@@ -13,7 +13,7 @@ Load our custom filters to extract info from the django generated markup.
 {% endif %}
 {% if results %}
 <div class="results override-change_list_results">
-<table id="result_list">
+<table id="result_list" class="usa-table usa-table--borderless usa-table--striped">
 <thead>
 <tr>
 
