--- a/src/registrar/templates/domain_your_contact_information.html
+++ b/src/registrar/templates/domain_your_contact_information.html
@@ -7,7 +7,7 @@
 
   <h1>Domain contact information</h1>
 
-<p>If you’d like us to use a different name, email, or phone number you can make those changes below. <strong>Please note that updating your contact information here will update the contact information for all domains in your account.</strong> However, it won’t affect your Login.gov account information.
+<p>If you’d like us to use a different name, email, or phone number you can make those changes below. <strong>Updating your contact information here will update the contact information for all domains in your account.</strong> However, it won’t affect your Login.gov account information.
 </p>
 
   {% include "includes/required_fields.html" %}
