--- a/src/registrar/templates/admin/change_form_no_submit.html
+++ b/src/registrar/templates/admin/change_form_no_submit.html
@@ -10,3 +10,11 @@
     </div>
 {% endif %}
 {% endblock %}
+
+{% block submit_buttons_top %}
+    {# Do not render the submit buttons #}
+{% endblock %}
+
+{% block submit_buttons_bottom %}
+    {# Do not render the submit buttons #}
+{% endblock %}
