--- a/src/registrar/templates/django/admin/domain_change_form.html
+++ b/src/registrar/templates/django/admin/domain_change_form.html
@@ -4,9 +4,14 @@
     <div class="submit-row">
         <input type="submit" value="Place hold" name="_place_client_hold">
         <input type="submit" value="Get the email" name="_get_security_email">
-        <input type="submit" value="Set Security Contact" name="_set_security_contact">
+        <input type="submit" value="Set New Security Contact" name="_set_security_contact">
         <input type="submit" value="Create the domain obj" name="_make_domain_in_registry">
-        <input type="submit" value="Create the domain obj" name="_make_domain_in_registry">
+        <input type="submit" value="add nameservers" name="_make_nameservers">
+        <input type="submit" value="get nameservers" name="_get_nameservers">
+        <input type="submit" value="get status" name="_get_status">
+        <input type="submit" value="add nameservers" name="_set_client_hold">
+        <input type="submit" value="get nameservers" name="_rem_client_hold">
+        <input type="submit" value="get status" name="_delete_domain">
     </div>
     {{ block.super }}
 {% endblock %}
